--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -1,8 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">LearningToolbox</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="welcome">¡Bienvenido!</string>
-    <string name="login">Login</string>
     <string name="user">Ingresa usuario o email</string>
     <string name="password">Contraseña</string>
     <string name="forgot_pass">¿Olvido la contraseña?</string>
