--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,16 @@
     <string name="do_not_account">¿No tienes cuenta?</string>
     <string name="learning">Learning</string>
     <string name="register">Registrate</string>
+    <string name="categorias">Categorias</string>
+    <string name="m_s_vistos">Más Vistos</string>
+    <string name="recomendados">Recomendados</string>
+    <string name="perfil">Perfil</string>
+    <string name="cerrar_sesi_n">Cerrar sesión</string>
+    <string name="buscar">Buscar</string>
+    <string name="toolbox">ToolBox</string>
+    <string name="categor_as">Categorías</string>
+    <string name="que_vas_a_reparar_hoy">¿Que vas a reparar hoy?</string>
+    <string name="plomeria">Plomeria</string>
+    <string name="carpinteria">Carpinteria</string>
+    <string name="electricidad">Electricidad</string>
 </resources>
