--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">LearningToolbox</string>
-    <string name="textHome">Esta aplicación es realizada por estudiantes de MisionTic como proyecto. Pretende alojar videos que enseñen a reparar cosas específicas</string>
+    <string name="textHome">Esta aplicación es realizada por estudiantes de MisionTic como proyecto. Pretende alojar videos que enseñen a reparar cosas específicas del hogar.</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="welcome">¡Bienvenido!</string>
     <string name="login">Login</string>
