Coneccion de layouts con navigate

--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -9,4 +9,5 @@
     <string name="toolbox">ToolBox</string>
     <string name="plomeria">Plomeria</string>
     <string name="electricidad">Electricidad</string>
+    <string name="inicio">Inicio</string>
 </resources>
